Outliner view_mode = "Blender File": Armatures UNKNOWN #75418

Closed
opened 2020-04-05 20:47:36 +02:00 by shannon zachow · 6 comments

System Information
Operating system: linux
Graphics card:

Blender Version
Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-04-03 21:41, hash: 7c0e285948, type: Release
build date: 2020-04-03, 23:01:15

Worked: 2.82a, 2.81a

Short description of error
Outliner view_mode = "Blender File" does not have a section labeled "Armatures".
Armatures are appearing below in section labeled "UNKNOWN"

Exact steps for others to reproduce the error
Add Armature.
In Outliner, change view_mode to "Blender File"
Armatures section does not exist.
Scroll down to section "UNKNOWN", there are your armatures.

Armatures are in section "UNKNOWN" in 2.83 (regardless of what version of blender created the file).

Armature created in 2.83, then viewed by running blender 2.82a or 2.81a are shown in correct section "Armatures".

**System Information** Operating system: linux Graphics card: **Blender Version** Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-04-03 21:41, hash: 7c0e28594840, type: Release build date: 2020-04-03, 23:01:15 Worked: 2.82a, 2.81a **Short description of error** Outliner view_mode = "Blender File" does not have a section labeled "Armatures". Armatures are appearing below in section labeled "UNKNOWN" **Exact steps for others to reproduce the error** Add Armature. In Outliner, change view_mode to "Blender File" Armatures section does not exist. Scroll down to section "UNKNOWN", there are your armatures. Armatures are in section "UNKNOWN" in 2.83 (regardless of what version of blender created the file). Armature created in 2.83, then viewed by running blender 2.82a or 2.81a are shown in correct section "Armatures".
Author

Added subscriber: @shannonz-1

Added subscriber: @shannonz-1
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Confirmed, checking...

Confirmed, checking...

This issue was referenced by c03e5e7830

This issue was referenced by c03e5e78308c13e2d4a7d06fef84070f5044738f
Philipp Oeser self-assigned this 2020-04-06 13:06:53 +02:00
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75418
No description provided.