Fix T75418: Outliner Blender File view has UNKNOWN category for armatures

Typo in rB57daecc2cf88.

Maniphest Tasks: T75418

Differential Revision: https://developer.blender.org/D7346